--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "react-scripts start"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
   },
   "repository": {
     "type": "git",
@@ -17,11 +19,16 @@
   "bugs": {
     "url": "https://github.com/ruwaid-401-advanced-javascript/resty/issues"
   },
+  "homepage": "https://ruwaid-401-advanced-javascript.github.io/resty",
   "dependencies": {
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "^3.4.1"
+    "react-scripts": "^3.4.1",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
+    "gh-pages": "^3.1.0",
+    "react-test-renderer": "^16.13.1"
   },
   "browserslist": {
     "production": [
