--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "resty",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "repository": {
     "type": "git",
@@ -19,7 +21,7 @@
   "bugs": {
     "url": "https://github.com/ruwaid-401-advanced-javascript/resty/issues"
   },
-  "homepage": "https://ruwaid-401-advanced-javascript.github.io/resty",
+  "homepage": "https://ruwaid-401-advanced-javascript.github.io/resty/",
   "dependencies": {
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
