--- a/.github/workflows/react.yml
+++ b/.github/workflows/react.yml
@@ -15,7 +15,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - name: Deploy to GH Pages
       run: |
-        git config --global user.name "${{ secrets.USERNAME }}"
-        git remote set-url origin https://${{ secrets.PERSONAL_TOKEN }}@github.com/ruwaid-401-advanced-javascript/resty.git
+        git config --global user.name "${{ github.actor }}"
+        git remote set-url origin https://${{ secrets.PERSONAL_TOKEN }}@github.com/${{ github.repository }}.git
         npm install
         npm run deploy
