--- a/package.json
+++ b/package.json
@@ -23,13 +23,14 @@
   },
   "homepage": "https://ruwaid-401-advanced-javascript.github.io/resty/",
   "dependencies": {
-    "node-sass": "^4.14.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "^3.4.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "gh-pages": "^3.1.0",
+    "node-sass": "^4.14.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-json-view": "^1.19.1",
+    "react-scripts": "^3.4.1",
     "react-test-renderer": "^16.13.1"
   },
   "browserslist": {
